form overflow fixes

--- a/source/less/blocks/feedback-form.less
+++ b/source/less/blocks/feedback-form.less
@@ -53,6 +53,12 @@
   }
 }
 
+.feedback-form__fieldset-contacts {
+  @media (min-width: @tablet-width) {
+    padding-bottom: 20px;
+  }
+}
+
 .feedback-form__fieldset-impression {
   grid-column: span 2;
 
